# quadrupedal_vision_navigation

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
envs/: dense_obstacle_env.py
src/quadrupedal_vision_navigation/: main.py
src/quadrupedal_vision_navigation/alignment/: control_barrier_functions.py  semantic_vision_aligner.py  sim2real_preference_tuner.py
src/quadrupedal_vision_navigation/assets/: quadruped_chassis.xml
src/quadrupedal_vision_navigation/controllers/: vision_locomotion.py
