[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadrupedal_vision_navigation"
version = "3.0.0"
description = "Enterprise Quadrupedal Alignment Engine featuring Control Barrier Functions and Semantic Vision-Language Alignment."
authors = [{ name = "Masthan Shaik", email = "masthan@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "mujoco>=3.0.0",
    "transformers>=4.31.0",
    "cvxpy>=1.3.2",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = ["black", "pytest"]
